Updating paths and adding example data

--- a/tutorials/plot_snv_atac.ipynb
+++ b/tutorials/plot_snv_atac.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "1d9cf6fd",
    "metadata": {},
    "outputs": [
@@ -148,7 +148,7 @@
    ],
    "source": [
     "# Load SNV predictions\n",
-    "snv_df = pd.read_csv('example_snv_predictions.csv')\n",
+    "snv_df = pd.read_csv('../data/example_snv_predictions.csv')\n",
     "snv_df"
    ]
   },
